k8s/yaml/constraint-template/ServiceAccount.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: validate-serviceaccount
spec:
  crd:
    spec:
      names:
        kind: validate-serviceaccount
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package main
        
        
        name = input.review.object.metadata.name
        
        namespace = input.review.object.metadata.namespace
        
        violation[{"msg": msg}] {
        	not name
        
        	msg := sprintf("serviceaccount %v has no name provided", [name])
        }
        
        violation[{"msg": msg}] {
        	not namespace
        
        	msg := sprintf("serviceaccount %v has no namespace provided", [name])
        }
        
        required_labels {
        	input.review.object.metadata.labels["app.kubernetes.io/name"]
        	input.review.object.metadata.labels["app.kubernetes.io/instance"]
        	input.review.object.metadata.labels["app.kubernetes.io/version"]
        	input.review.object.metadata.labels["app.kubernetes.io/component"]
        	input.review.object.metadata.labels["app.kubernetes.io/part-of"]
        	input.review.object.metadata.labels["app.kubernetes.io/managed-by"]
        }
        
        # a list of ressources which needes a serviceaccount
        serviceaccount_needed = [
        	"unittest-ansparservice",
        	"unittest-authservice",
        	"unittest-certservice",
        	"unittest-mysql",
        ]
        
        allowed_kinds = [
        	"ConfigMap",
        	"Secret",
        	"Service",
        	"Deployment",
        	"PersistentVolume",
        	"PersistentVolumeClaim",
        	"HorizontalPodAutoscaler",
        	"Ingress",
        	"Job",
        	"Role",
        	"RoleBinding",
        	"ServiceAccount",
        	"PodDisruptionBudget",
        	"NetworkPolicy",
        	"Pod",
        	"PodSecurityPolicy",
        ]
        
        allowed_subject_kinds = [
        	"ServiceAccount",
        	"Group",
        ]
        
        violation[{"msg": msg}] {
        	not required_labels
        	msg = sprintf("%s of kind %s must include Kubernetes recommended labels: https://kubernetes.io/docs/concepts/overview/working-with-objects/common-labels/#labels", [name, input.review.object.kind])
        }
        
        exists_in_list(element, list) {
        	val := list[_]
        	element == val
        }
        
        violation[{"msg": msg}] {
        	val := input.review.object.kind
        	not exists_in_list(input.review.object.kind, allowed_kinds)
        
        	msg = sprintf("%v is not a allowed kind", [val])
        }
        
        trusted_registries = [
        	"luke19",
        	"curlimages",
        	"test"
        ]
        
        startswith_in_list(element, list) {
        	startswith(element, list[_])
        }
